syntax = "proto3";

package keyapi;

// TODO (drausin) comments
service Key {
    rpc AddPublicKeys (AddPublicKeysRequest) returns (AddPublicKeysResponse) {}
    rpc GetPublicKeys (GetPublicKeysRequest) returns (GetPublicKeysResponse) {}
    rpc SamplePublicKeys (SamplePublicKeysRequest) returns (SamplePublicKeysResponse) {}
    rpc GetPublicKeyDetails (GetPublicKeyDetailsRequest) returns (GetPublicKeyDetailsResponse) {}
}

message AddPublicKeysRequest {
    string entity_id = 1;
    KeyType key_type = 2;
    repeated bytes public_keys = 3;
}

message AddPublicKeysResponse {}

message GetPublicKeyDetailsRequest {
    repeated bytes public_keys = 3;
}

message GetPublicKeyDetailsResponse {
    repeated PublicKeyDetail public_key_details = 1;
}

message GetPublicKeysRequest {
    string entity_id = 1;
    KeyType key_type = 2;
}

message GetPublicKeysResponse {
    repeated bytes public_keys = 3;
}

message SamplePublicKeysRequest {
    string of_entity_id = 1;
    string requester_entity_id = 2;
    uint32 n_public_keys = 3;
}

message SamplePublicKeysResponse {
    repeated PublicKeyDetail public_key_details = 1;
}

message PublicKeyDetail {
    bytes public_key = 1;
    string entity_id = 2;
    KeyType key_type = 3;
}

enum KeyType {
    AUTHOR = 0;
    READER = 1;
}
